--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(untitled1)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(untitled1 main.cpp Sales_item.h)
+add_executable(untitled1 main.cpp Sales_item.h Sales_data.h)
