--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.12)
-project(untitled1)
+cmake_minimum_required(VERSION 2.8)
+project(cpplv1)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(untitled1 main.cpp Sales_item.h Sales_data.h)
+add_executable(cpplv1 main.cpp Sales_item.h Sales_data.h)
