wsl ubuntu set up, could coding remote

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 2.8)
 project(cpplv1)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(cpplv1 main.cpp Sales_item.h Sales_data.h)
+add_executable(cpplv1 Sales_item.h Sales_data.h main.cpp)
