Part I finished, ready to go Part II

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(cpplv1)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(cpplv1 Sales_item.h Sales_data.h main.cpp Chapter6.h fact.cpp factMain.cpp Person.h Screen.h Window_mgr.h Employee.h Debug.h)
+add_executable(cpplv1 Sales_item.h Sales_data.h main.cpp Chapter6.h fact.cpp factMain.cpp Person.h Screen.h Window_mgr.h Employee.h Debug.h Account.h)
