17th chapter finished~

--- a/rules
+++ b/rules
@@ -1,8 +1,14 @@
 brb be right back
 k okay?
+k not okay
+k hell no
 y why
+y yeah
+y yes
 r are
 u you
+u uniform
+u united
 pic picture
 thk thanks!
 l8r later
